04_AzNSG/01_Deploy/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {  },
  "variables": {  },
  "functions": [  ],
  "resources":
    [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-11-01",
        "name": "@@AzNsgName@@",
        "location": "@@AzLoc@@",
        "tags":
          {
            "Owner": "@@AzTagOwner@@",
            "Environment": "@@AzTagEnv@@"
          },
        "properties":
          {
            "securityRules":
              [
                {
                  "name": "AllowHttpsInBound",
                  "id": "AllowHttpsInBound",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties":
                    {
                      "access": "Allow",
                      "destinationAddressPrefix": "*",
                      "destinationAddressPrefixes": [],
                      "destinationPortRange": "443",
                      "destinationPortRanges": [],
                      "direction": "Inbound",
                      "priority": 120,
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "Internet",
                      "sourceAddressPrefixes": [],
                      "sourcePortRange": "*",
                      "sourcePortRanges": [ ]
                    }
                },
                {
                  "name": "AllowGatewayManagerInBound",
                  "id": "AllowGatewayManagerInBound",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties":
                    {
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "GatewayManager",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 130,
                        "direction": "Inbound",
                        "sourcePortRanges": [],
                        "destinationPortRanges": [],
                        "sourceAddressPrefixes": [],
                        "destinationAddressPrefixes": []
                    }
                },
                {
                  "name": "AllowSshRdpOutbound",
                  "id": "AllowSshRdpOutbound",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties":
                    {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Outbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges":
                        [
                          "22",
                          "3389"
                        ],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                    }
                },
                {
                  "name": "AllowAzureCloudOutBound",
                  "id": "AllowAzureCloudOutBound",
                  "properties":
                    {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "AzureCloud",
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Outbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                    }
                },
                {
                  "name": "AllowGetSessionInformation",
                        "id": "AllowGetSessionInformation",
                        "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                        "properties":
                          {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                          }
                }
              ]
          }
      }
    ],
  "outputs": {  }
}
