04_AzNSG/01_Deploy/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {  },
  "variables": {  },
  "functions": [  ],
  "resources":
    [
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2020-11-01",
        "name": "AzureBastionSubnet_nsg",
        "location": "East US 2",
        "tags":
          {
            "Owner": "joseph cropper",
            "Environment": "POC"
          },
        "properties":
          {
            "securityRules":
              [
                {
                  "name": "AllowHttpsInBound",
                  "id": "AllowHttpsInBound",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties":
                    {
                      "access": "Allow",
                      "destinationAddressPrefix": "*",
                      "destinationAddressPrefixes": [],
                      "destinationPortRange": "443",
                      "destinationPortRanges": [],
                      "direction": "Inbound",
                      "priority": 120,
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "Internet",
                      "sourceAddressPrefixes": [],
                      "sourcePortRange": "*",
                      "sourcePortRanges": [ ]
                    }
                },
                {
                  "name": "AllowGatewayManagerInBound",
                  "id": "AllowGatewayManagerInBound",
                  "type": "Microsoft.Network/networkSecurityGroups/securityRules",
                  "properties":
                    {
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "GatewayManager",
                        "destinationAddressPrefix": "*",
                        "access": "Allow",
                        "priority": 130,
                        "direction": "Inbound",
                        "sourcePortRanges": [],
                        "destinationPortRanges": [],
                        "sourceAddressPrefixes": [],
                        "destinationAddressPrefixes": []
                    }
                }
              ]
          }
      }
    ],
  "outputs": {  }
}
